# globset

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  FAQ.md  GUIDE.md  README.md  appveyor.yml  build.rs  snapcraft.yaml
.github/workflows/: ci.yml
ci/: before_deploy.sh  build_deb.sh  script.sh  utils.sh
ci/docker/x86_64-unknown-linux-musl/: Dockerfile
complete/: _rg
doc/: rg.1.txt.tpl
glob-test/: Cargo.toml
glob-test/src/: escape.rs  lib.rs
globset/: Cargo.toml
globset/src/: glob.rs  lib.rs  pathutil.rs
grep/: Cargo.toml
grep-cli/: Cargo.toml
grep-cli/src/: decompress.rs  escape.rs  human.rs  lib.rs  pattern.rs  process.rs  wtr.rs
grep-matcher/: Cargo.toml
grep-matcher/src/: interpolate.rs  lib.rs
grep-matcher/tests/: test_matcher.rs  tests.rs  util.rs
grep-pcre2/: Cargo.toml
grep-pcre2/src/: error.rs  lib.rs  matcher.rs
grep-printer/: Cargo.toml
grep-printer/src/: color.rs  counter.rs  json.rs  jsont.rs  lib.rs  macros.rs  standard.rs  stats.rs  summary.rs  util.rs
grep-regex/: Cargo.toml
grep-regex/src/: ast.rs  config.rs  crlf.rs  error.rs  lib.rs  literal.rs  matcher.rs  multi.rs  non_matching.rs  strip.rs  util.rs  word.rs
grep-searcher/: Cargo.toml
grep-searcher/examples/: search-stdin.rs
grep-searcher/src/: lib.rs  line_buffer.rs  lines.rs  macros.rs  sink.rs  testutil.rs
grep-searcher/src/searcher/: core.rs  glue.rs  mmap.rs  mod.rs
grep/examples/: simplegrep.rs
grep/src/: lib.rs  literals.rs  search.rs
grep2/: Cargo.toml
grep2/src/: lib.rs
ignore/: Cargo.toml
ignore/examples/: walk.rs
ignore/src/: dir.rs  gitignore.rs  lib.rs  overrides.rs  pathutil.rs  types.rs  walk.rs
ignore/tests/: gitignore_matched_path_or_any_parents_tests.rs
pkg/brew/: ripgrep-bin.rb
src/: app.rs  args.rs  config.rs  decompressor.rs  error.rs  glob.rs  lib.rs  logger.rs  main.rs  messages.rs  parse.rs  path_printer.rs  pathutil.rs  preprocessor.rs  search.rs  subject.rs  unescape.rs  utf8.rs  worker.rs
tests/: binary.rs  feature.rs  json.rs  macros.rs  misc.rs  multiline.rs  regression.rs  tests.rs  util.rs  workdir.rs
tests/data/: alt.toml  case.toml  error.toml  escape.toml  literal-set.toml  literal.toml  range.toml  recursive.toml  sherlock-nul.txt  star.toml  unicode.toml  unix.toml  windows.toml
