[package]
name = "ripgrep"
version = "0.9.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
ripgrep is a line-oriented search tool that recursively searches your current
directory for a regex pattern while respecting your gitignore rules. ripgrep
has first class support on Windows, macOS and Linux
"""
documentation = "https://github.com/BurntSushi/ripgrep"
homepage = "https://github.com/BurntSushi/ripgrep"
repository = "https://github.com/BurntSushi/ripgrep"
readme = "README.md"
keywords = ["regex", "grep", "egrep", "search", "pattern"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
exclude = ["HomebrewFormula"]
build = "build.rs"
autotests = false

[badges]
travis-ci = { repository = "BurntSushi/ripgrep" }
appveyor = { repository = "BurntSushi/ripgrep" }

[[bin]]
bench = false
path = "src/main.rs"
name = "rg"

[[test]]
name = "integration"
path = "tests/tests.rs"

[workspace]
members = ["grep", "globset", "ignore"]

[dependencies]
atty = "0.2.11"
bytecount = "0.3.2"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
globset = { version = "0.4.0", path = "globset" }
grep = { version = "0.1.8", path = "grep" }
ignore = { version = "0.4.0", path = "ignore" }
lazy_static = "1"
libc = "0.2"
log = "0.4"
memchr = "2"
memmap = "0.6"
num_cpus = "1"
regex = "1"
same-file = "1"
termcolor = "1"

[dependencies.clap]
version = "2.29.4"
default-features = false
features = ["suggestions", "color"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["std", "winnt"]

[build-dependencies]
lazy_static = "1"

[build-dependencies.clap]
version = "2.29.4"
default-features = false
features = ["suggestions", "color"]

[features]
avx-accel = [
  "bytecount/avx-accel",
]
simd-accel = [
  "bytecount/simd-accel",
  "encoding_rs/simd-accel",
]

[profile.release]
debug = true
