[package]
publish = false
name = "glob-test"
version = "0.0.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Infrastructure for testing globs.

You probably don't want to use this crate unless you're working on a globbing
implementation.
"""
documentation = "https://docs.rs/glob-test"
repository = "https://github.com/BurntSushi/globset/tree/master/glob-test"
readme = "README.md"
keywords = ["glob", "path", "test"]
license = "Unlicense/MIT"
edition = "2018"

[lib]
name = "glob_test"
bench = false

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
snafu = "0.5.0"
toml = "0.5.3"

[dependencies.bstr]
version = "0.2.8"
default-features = false
features = ["std", "serde1"]

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std"]
