[package]
name = "grep"
version = "0.2.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Fast line oriented regex searching as a library.
"""
documentation = "http://burntsushi.net/rustdoc/grep/"
homepage = "https://github.com/BurntSushi/ripgrep"
repository = "https://github.com/BurntSushi/ripgrep"
readme = "README.md"
keywords = ["regex", "grep", "egrep", "search", "pattern"]
license = "Unlicense/MIT"

[dependencies]
grep-cli = { version = "0.1.1", path = "../grep-cli" }
grep-matcher = { version = "0.1.1", path = "../grep-matcher" }
grep-pcre2 = { version = "0.1.2", path = "../grep-pcre2", optional = true }
grep-printer = { version = "0.1.1", path = "../grep-printer" }
grep-regex = { version = "0.1.1", path = "../grep-regex" }
grep-searcher = { version = "0.1.1", path = "../grep-searcher" }

[dev-dependencies]
atty = "0.2.11"
regex = "1.1"
termcolor = "1.0.4"
walkdir = "2.2.7"

[dev-dependencies.clap]
version = "2.32.0"
default-features = false
features = ["suggestions"]

[features]
simd-accel = ["grep-searcher/simd-accel"]
pcre2 = ["grep-pcre2"]

# This feature is DEPRECATED. Runtime dispatch is used for SIMD now.
avx-accel = []
