[package]
name = "ignore"
version = "0.4.4"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A fast library for efficiently matching ignore files such as `.gitignore`
against file paths.
"""
documentation = "https://docs.rs/ignore"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/ignore"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/ignore"
readme = "README.md"
keywords = ["glob", "ignore", "gitignore", "pattern", "file"]
license = "Unlicense/MIT"

[lib]
name = "ignore"
bench = false

[dependencies]
crossbeam-channel = "0.2.4"
globset = { version = "0.4.2", path = "../globset" }
lazy_static = "1.1.0"
log = "0.4.5"
memchr = "2.0.2"
regex = "1.0.5"
same-file = "1.0.3"
thread_local = "0.3.6"
walkdir = "2.2.5"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.1"

[dev-dependencies]
tempdir = "0.3.7"

[features]
simd-accel = ["globset/simd-accel"]
